<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="151dp"
        android:text="@string/sign_in"
        android:textSize="26sp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="67dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/tvSignIn"
        tools:layout_editor_absoluteX="20dp">

        <EditText
            android:id="@+id/nameEt_signUpPage"
            android:layout_width="289dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@null"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/emailEt_signUpPage"
            android:layout_width="289dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="49dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@null"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/last_name"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/PassEt_signUpPage"
            android:layout_width="289dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="49dp"
            android:background="@drawable/edit_text_bg"
            android:fontFamily="@font/montserrat_medium"
            android:gravity="center"
            android:hint="@string/email"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <Button
            android:id="@+id/signUpBtn_signUpPage"
            android:layout_width="289dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginTop="55dp"
            android:background="@drawable/btn_bg"
            android:elevation="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:backgroundTint="@null" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="Already have an account? "
                android:textColor="@color/dark_grey"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/signInTv_signUpPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/log_in"
                android:textColor="@color/blue"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="70dp"
        android:src="@drawable/ic_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvSignInWithGoogle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ImageView
        android:id="@+id/ivApple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="132dp"
        android:src="@drawable/ic_apple"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/tvSignInWithApple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="134dp"
        android:layout_marginTop="132dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/sign_in_with_apple"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>