<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="153dp"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:text="@string/welcome_back"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/emailEt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="259dp"
        android:layout_marginEnd="42dp"
        android:layout_marginStart="44dp"
        android:background="@drawable/edit_text_bg"
        android:drawableEnd="@null"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/dark_grey"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <EditText
        android:id="@+id/PassEt"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="42dp"
        android:background="@drawable/edit_text_bg"
        android:drawableEnd="@null"
        android:fontFamily="@font/montserrat_medium"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailEt"
        android:autofillHints="" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:src="@drawable/ic_eye_password"
        app:layout_constraintBottom_toBottomOf="@+id/PassEt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/PassEt" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        app:backgroundTint="@null"
        android:layout_marginTop="451dp"
        android:layout_marginStart="43dp"
        android:layout_marginEnd="43dp"
        android:elevation="10dp"
        android:textAllCaps="false"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>